[UI] Fix color & text wrapping in progress bars. Fixes #874
The bulk of the change is in removing the progress bar color overrides. The other part is putting in the line about wrapping.

--- a/src/ui/app/bootstrap-theme.css
+++ b/src/ui/app/bootstrap-theme.css
@@ -357,9 +357,8 @@ body {
   background-color: var(--body-bg) !important;
 }
 
-.progress-bar {
-  color: var(--text-color) !important;
-  background-color: var(--body-bg) !important;
+.progress {
+  white-space: nowrap;
 }
 
 .select__control {
